# m4b-splitter

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ci.yml  codecov.yml  pyproject.toml
.github/workflows/: release.yml
src/m4b_splitter/: __init__.py  cli.py  conftest.py  dependencies.py  models.py  probe.py  progress.py  splitter.py
tests/: conftest.py  test_cli.py  test_dependencies.py  test_integration.py  test_models.py  test_progress.py  test_splitter.py  test_utils.py
